--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,9 @@ dependencies {
 
 	implementation 'javax.xml.bind:jaxb-api:2.3.1'
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+    testImplementation 'org.projectlombok:lombok:1.18.28'
 
-	compileOnly 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	runtimeOnly 'mysql:mysql-connector-java:8.0.30'
